# uv_issue_16484

./: readme.md
my-lib/: pyproject.toml
my-testing-lib/: pyproject.toml
my-testing-lib/src/my_testing_lib/: __init__.py
other-lib/: pyproject.toml
other-lib/src/other_lib/: __init__.py
pyqt-extra-dep-lib/: pyproject.toml
pyqt-extra-dep-lib/src/pyqt_extra_dep_lib/: __init__.py
