[project]
name = "other-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vikentiy Smetanin", email = "vikentiy.smetanin@axxonsoft.dev" }
]
requires-python = ">=3.12"
dependencies = [
    # "my-testing-lib[gui]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
my-testing-lib = { git = "ssh://git@github.com/Wintreist/uv_issue_16484.git", subdirectory = "my-testing-lib" }
