[project]
name = "pyqt-extra-dep-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vikentiy Smetanin", email = "vikentiy.smetanin@axxonsoft.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
